Corrected spelling mistake in accessibility section and spacing on validation pattern

--- a/src/_css/design-manual/_design-manual.scss
+++ b/src/_css/design-manual/_design-manual.scss
@@ -622,6 +622,10 @@ pre[class*="language-"] {
       }
 }
 
+.form-error:last-child {
+      margin: .5em 0;
+}
+
 //Feedback content
 #FeedbackForm {
   .h2 {
